Alignment fix for letters with subscripts in Inequality

--- a/src/scss/common/inequality-modal.scss
+++ b/src/scss/common/inequality-modal.scss
@@ -304,7 +304,7 @@
                             }
                         }
 
-                        &.radix, &.fraction, &.derivative {
+                        &.radix, &.fraction, &.derivative, &.has-subscript {
                             .katex span.base {
                                 line-height: 36px;
                             }
